--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==0.5.0
 Django==3.2.4
 django-autoslug==1.9.8
 django-crispy-forms==1.12.0
+django-google-analytics-app==5.0.3
 django-heroku==0.3.1
 django-social-share==2.2.1
 django-heroku==0.3.1
